Fix responsive layout issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -220,7 +220,7 @@ body {
 
 .second-right {
     width: 50%;
-    padding: 10px;
+    padding: 50px;
     margin-right: 70px;
 }
 
